# leftysay

./: Cargo.toml  Makefile  README.md  config.example.toml
.github/workflows/: ci.yml
packs/birds/: pack.toml
packs/default/: pack.toml
src/: main.rs
