[package]
name = "leftysay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
terminal_size = "0.3"
textwrap = "0.16"
toml = "0.8"
unicode-width = "0.2"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
